--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="icon" type="image/x-icon" href="pictures/favicon_panda.ico">
 </head>
 
-<body>
+<body id="index">
   <section class="left">
     <img class="aboutme" src="pictures/picaboutme.jpg" alt="picture of bella">
     <h2>@About me!</h2>
