fixing pictures issue
pictures weren't showing properly due to them being in a map pre-import so i fixed the image sources in the code

--- a/badges.html
+++ b/badges.html
@@ -11,12 +11,12 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Dongle:wght@300&family=Fredoka:wght@700&display=swap"
     rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="pictures/favicon_panda.ico">
+  <link rel="icon" type="image/x-icon" href="favicon_panda.ico">
 </head>
 
 <body>
   <section class="left">
-    <img class="aboutme" src="pictures/picaboutme.jpg" alt="picture of bella">
+    <img class="aboutme" src="picaboutme.jpg" alt="picture of bella">
     <h2>@About me!</h2>
     <p>I'm a 14 year old programming student from the Netherlands. I've been interested in tech all my life and started
       my programming journey when I was 12. I love making websites and learning more programming languages in my free
@@ -41,14 +41,14 @@
       <p>Giving me badges is my school's way of saying I have sufficiently completed the course linked to that badge and
         therefore understand the contents.</p>
     </div>
-    <div><img alt="HTML-0" class="badges" src="pictures/html0.png"><img alt="HTML-1" class="badges"
-        src="pictures/html1.png"><img alt="JS Web" class="badges" src="pictures/jsweb.png"><img alt="CSS games"
-        class="badges" src="pictures/CSSgames.png"><img alt="Blender basics" class="badges"
-        src="pictures/blender.png"><img alt="Blokjesprogrammeren-0" class="badges" src="pictures/blokjes.jpeg"><img
-        alt="Embedded" class="badges" src="pictures/embedded.png"><img alt="Python-0" class="badges"
-        src="pictures/python.png.png"><img alt="Python-1A" class="badges" src="pictures/python.png.png"><img
-        alt="Python-1B" class="badges" src="pictures/python.png.png"><img alt="Python-2" class="badges"
-        src="pictures/python.png.png"><img alt="Blokjesprogrammeren-1" class="badges" src="pictures/scratch.png">
+    <div><img alt="HTML-0" class="badges" src="html0.png"><img alt="HTML-1" class="badges"
+        src="html1.png"><img alt="JS Web" class="badges" src="jsweb.png"><img alt="CSS games"
+        class="badges" src="CSSgames.png"><img alt="Blender basics" class="badges"
+        src="blender.png"><img alt="Blokjesprogrammeren-0" class="badges" src="blokjes.jpeg"><img
+        alt="Embedded" class="badges" src="embedded.png"><img alt="Python-0" class="badges"
+        src="python.png.png"><img alt="Python-1A" class="badges" src="python.png.png"><img
+        alt="Python-1B" class="badges" src="python.png.png"><img alt="Python-2" class="badges"
+        src="python.png.png"><img alt="Blokjesprogrammeren-1" class="badges" src="scratch.png">
     </div>
   </section>
 
