--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Dongle:wght@300&family=Fredoka:wght@700&display=swap"
     rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="pictures/favicon_panda.ico">
+  <link rel="icon" type="image/x-icon" href="favicon_panda.ico">
 </head>
 
 <body id="index">
   <section class="left">
-    <img class="aboutme" src="pictures/picaboutme.jpg" alt="picture of bella">
+    <img class="aboutme" src="picaboutme.jpg" alt="picture of bella">
     <h2>@About me!</h2>
     <p>I'm a 14 year old programming student from the Netherlands. I've been interested in tech all my life and started
       my programming journey when I was 12. I love making websites and learning more programming languages in my free
