--- a/projects.html
+++ b/projects.html
@@ -11,12 +11,12 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Dongle:wght@300&family=Fredoka:wght@700&display=swap"
     rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="pictures/favicon_panda.ico">
+  <link rel="icon" type="image/x-icon" href="favicon_panda.ico">
 </head>
 
 <body>
   <section class="left">
-    <img class="aboutme" src="pictures/picaboutme.jpg" alt="picture of bella">
+    <img class="aboutme" src="picaboutme.jpg" alt="picture of bella">
     <h2>@About me!</h2>
     <p>I'm a 14 year old programming student from the Netherlands. I've been interested in tech all my life and started
       my programming journey when I was 12. I love making websites and learning more programming languages in my free
@@ -43,7 +43,7 @@
         titles to open the websites in another tab :)</p>
     </div>
     <div>
-      <a target="_blank" href="https://incc-project-studio.babellaaa.repl.co"><img src="pictures/smart_studio.png"
+      <a target="_blank" href="https://incc-project-studio.babellaaa.repl.co"><img src="smart_studio.png"
           class="projects" alt="picture of the project"><br>
         <h2>@Project_Smart_Studio</h2>
       </a><br>
@@ -57,7 +57,7 @@
 
     <div>
       <a target="_blank" href="https://eindproduct-thatbellastuffz.html-css-1-cc-2122.repl.co"><img
-          src="pictures/menu.png" class="projects" alt="picture of the project"><br>
+          src="menu.png" class="projects" alt="picture of the project"><br>
         <h2>@Make_a_Menu</h2>
       </a><br>
       <p>This was another assignment for school, for which I was assigned to make a website around the theme "menu". I
@@ -65,7 +65,7 @@
     </div>
 
     <div>
-      <a target="_blank" href="https://portfolio-v1.sabellai.repl.co"><img src="pictures/portfolio1.png"
+      <a target="_blank" href="https://portfolio-v1.sabellai.repl.co"><img src="portfolio1.png"
           class="projects" alt="picture of the project"><br>
         <h2>@Portfolio_version_1
         </h2>
@@ -76,7 +76,7 @@
     </div>
 
     <div>
-      <img class="projects" src="pictures/codingcore1.png" alt="picture of the project"><br>
+      <img class="projects" src="codingcore1.png" alt="picture of the project"><br>
       <h2>@CodingCore</h2><br>
       <p>CodingCore is a website I made for myself. I use a lot of websites when coding and I'm too lazy to keep typing
         in all my searches, so I just made this website to be able to press buttons instead of having to type everything
@@ -90,7 +90,7 @@
     </div>
 
     <div>
-      <a target="_blank" href="https://over-mij.thatbellastuffz.repl.co"><img src="pictures/html_exercise.png"
+      <a target="_blank" href="https://over-mij.thatbellastuffz.repl.co"><img src="html_exercise.png"
           class="projects" alt="picture of the project"><br>
         <h2>@HTML_Exercise
         </h2>
@@ -101,7 +101,7 @@
 
     <div>
       <a target="_blank" href="https://projectcoderclassperiode2.la160209da.repl.co"><img
-          src="pictures/safe_society.png" class="projects" alt="picture of the project"><br>
+          src="safe_society.png" class="projects" alt="picture of the project"><br>
         <h2>@Project_Safe_Society
         </h2>
       </a>
@@ -116,7 +116,7 @@
 
     <div>
       <a target="_blank" href="https://eindopdracht-thatbellastuffz.html-css-0-cc.repl.co"><img
-          src="pictures/helloworld.png" class="projects" alt="picture of the project"><br>
+          src="helloworld.png" class="projects" alt="picture of the project"><br>
         <h2>@My_first_website</h2>
       </a><br>
       <p>This was the very first website I've ever made. It was an assignment for school, for which I had to choose a
