--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Dongle:wght@300&family=Fredoka:wght@700&display=swap"
     rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="pictures/favicon_panda.ico">
+  <link rel="icon" type="image/x-icon" href="favicon_panda.ico">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
       <h2>Contact information</h2><br>
       <p>You can reach me at my school email: <a href="mailto:27566@edu.msa.nl">click here.</a></p>
     </div>
-    <div id="contact"><img src="pictures/picaboutme.jpg" alt="picture of me">
+    <div id="contact"><img src="picaboutme.jpg" alt="picture of me">
       <h2>@About me!</h2>
       <p>I'm a 14 year old programming student from the Netherlands. I've been interested in tech all my life and
         started my programming journey when I was 12. I love making websites and learning more programming languages in
