--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <section class="main">
     <div id="welcome">
       <!-- the div is here to make sure the header doesn't move anything outside this div when the header becomes longer -->
-      <header id="header-text">Placeholder</header>
+      <header id="header-text">Hello world!</header>
     </div>
     <script src="script.js"></script>
     <!-- this is to activate the code that changes "Placeholder" into the welcome text-->
