fix contact page

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     </nav>
   </section>
 
-  <section class="main">
+  <section class="main" id="contactpage">
     <div class="mim">
       <h2>Contact information</h2><br>
       <p>You can reach me at my school email: <a href="mailto:27566@edu.msa.nl">click here.</a></p>
