--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Isabella's portfolio</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="old_style.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
