switching css file
old_style.css doesnt use flex, which is required for this assignment. i'm keeping old_style.css just in case, but i'll only be using style.css from now on

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Isabella's portfolio</title>
-  <link href="old_style.css" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Dongle:wght@300&family=Fredoka:wght@700&display=swap" rel="stylesheet">
