--- a/contact.html
+++ b/contact.html
@@ -29,16 +29,16 @@
       <h2>Contact information</h2><br>
       <p>You can reach me at my school email: <a href="mailto:27566@edu.msa.nl">click here.</a></p>
     </div>
-    <div id="contact"><img src="picaboutme.jpg" alt="picture of me">
-      <h2>@About me!</h2>
-      <p>I'm a 14 year old programming student from the Netherlands. I've been interested in tech all my life and
-        started my programming journey when I was 12. I love making websites and learning more programming languages in
-        my free time. This doesn't stop at just programming languages either; I'm fluent in English, Dutch, Portuguese,
-        and I'm learning French, German, and Korean.<br>At school I study many programming languages, inluding HTML,
-        CSS, Javascript, and Python. At home I enbroaden my knowledge on these languages and teach myself Unity and
-        C#.<br>Outside of of school and technology, I enjoy playing the piano and exposing myself to art and new ideas
-        to stay open-minded and creative. Please feel free to reach out!</p>
-    </div>
+    <div id="contact">
+    <img class="aboutme" src="picaboutme.jpg" alt="picture of bella">
+    <h2>@About me!</h2>
+    <p>I'm a 15 year old programming student from the Netherlands. I've been interested in tech all my life and started
+      my programming journey when I was 12. I love making websites and learning more programming languages in my free
+      time. Even though I love coding, I also enjoy learning non-programming languages; I'm fluent in English, Dutch, Portuguese, and I'm
+      learning French, German, and Korean.<br>At school I study many programming languages, inluding HTML, CSS,
+      Javascript, and Python. At home I enbroaden my knowledge on these languages and teach myself Unity and
+      C#.<br>Outside of of school and technology, I enjoy playing the piano and exposing myself to art and new ideas to
+      stay open-minded and creative.</p>
   </section>
 </body>
 
