--- a/badges.html
+++ b/badges.html
@@ -30,16 +30,9 @@
       <p>Giving me badges is my school's way of saying I have sufficiently completed the course linked to that badge and
         therefore understand the contents.</p>
     </div>
-    <div><img alt="HTML-0" class="badges" src="html0.png"><img alt="HTML-1" class="badges"
-        src="html1.png"><img alt="JS Web" class="badges" src="jsweb.png"><img alt="CSS games"
-        class="badges" src="CSSgames.png"><img alt="Blender basics" class="badges"
-        src="blender.png"><img alt="Blokjesprogrammeren-0" class="badges" src="blokjes.jpeg"><img
-        alt="Embedded" class="badges" src="embedded.png"><img alt="Python-0" class="badges"
-        src="python.png.png"><img alt="Python-1A" class="badges" src="python.png.png"><img
-        alt="Python-1B" class="badges" src="python.png.png"><img alt="Python-2" class="badges"
-        src="python.png.png"><img alt="Blokjesprogrammeren-1" class="badges" src="scratch.png">
-    </div>
-  </section>
+    <div class="longer"><iframe src="https://www.badgecraft.eu/auto/my/portfolio/9a0024b5-5b71-466c-bb51-83678f890b99/public" title="My Badges"></iframe></div>
+    </section>
+    
   <section class="left">
     <img class="aboutme" src="picaboutme.jpg" alt="picture of bella">
     <h2>@About me!</h2>
@@ -50,7 +43,7 @@
       Javascript, and Python. At home I enbroaden my knowledge on these languages and teach myself Unity and
       C#.<br>Outside of of school and technology, I enjoy playing the piano and exposing myself to art and new ideas to
       stay open-minded and creative.</p>
-  </section>
+    </section>
 
 </body>
 
