--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
 
 <head>
   <meta charset="utf-8">
@@ -39,6 +39,7 @@
       Javascript, and Python. At home I enbroaden my knowledge on these languages and teach myself Unity and
       C#.<br>Outside of of school and technology, I enjoy playing the piano and exposing myself to art and new ideas to
       stay open-minded and creative.</p>
+	  </div>
   </section>
 </body>
 
