--- a/badges.html
+++ b/badges.html
@@ -30,7 +30,7 @@
       <p>Giving me badges is my school's way of saying I have sufficiently completed the course linked to that badge and
         therefore understand the contents.</p>
     </div>
-    <div class="longer"><iframe src="https://www.badgecraft.eu/auto/my/portfolio/9a0024b5-5b71-466c-bb51-83678f890b99/public" title="My Badges"></iframe></div>
+	<iframe src="https://www.badgecraft.eu/auto/my/portfolio/9a0024b5-5b71-466c-bb51-83678f890b99/public" title="My Badges"></iframe>
     </section>
     
   <section class="left">
