--- a/portfoliov3/index.html
+++ b/portfoliov3/index.html
@@ -2,6 +2,7 @@
 <html lang="en"><head>
 	<head>
 		<title>Isabella's portfolio</title>
+		<link href="style.css" rel="stylesheet" type="text/css">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
