--- a/portfoliov3/index.html
+++ b/portfoliov3/index.html
@@ -8,7 +8,46 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Monofett&family=Potta+One&display=swap" rel="stylesheet">
+		<style type="text/css">* {cursor: url(https://cur.cursors-4u.net/smilies/smi-2/smi166.cur), auto !important;}</style>
 		</head>
 	<body>
+	<section class="main">
+	<div id="welcome">
+		<!-- the div is here to make sure the header doesn't move anything outside this div when the header becomes longer -->
+		<header id="header-text">Hello! I'm Bella</header> <!-- might wanna change the font for this bc of the korean -->
+		<script src="script.js"></script>
+		<!-- this is to activate the code that changes "Placeholder" into the welcome text-->
+		</div>
+		</section>
+	<section class="right">
+		<div> <!-- this needs a class dude -->	
+			<img class="aboutme" src="Isabella.jpg" alt="A picture of Isabella">
+			<h2>@ISABELLA BRAAM</h2>
+			<img src="placeholder.jpg" alt="Sabellai Logo" class="logo"> <h3 class="right">@sabellai</h3>
+			</div>
+		<div>
+			<ul>
+				<li><h3>Webdevelopment student</h3></li>
+				<li><h3>Fluent in English, Dutch, Portuguese</h3></li>
+				<li><h3>Amsterdam, Netherlands</h3></li>
+				<li><a href="mailto:braamisabella@gmail.com"><h3>braamisabella@gmail.com</h3></a></li>
+			</div>
+		<div>
+			<p>I'm a 15 year old programming student from the Netherlands. I've been interested in tech all my life and started
+		  my programming journey when I was 12. I love making websites and learning more programming languages in my free
+		  time. Even though I love coding, I also enjoy learning non-programming languages; I'm fluent in English, Dutch, Portuguese, and I'm
+		  learning French, German, and Korean.<br>At school I study many programming languages, inluding HTML, CSS,
+		  Javascript, and Python. At home I enbroaden my knowledge on these languages and teach myself Unity and
+		  C#.<br>Outside of of school and technology, I enjoy playing the piano and exposing myself to art and new ideas to
+		  stay open-minded and creative.</p>
+		  </div>
+	  </section>
+	<section class="navbar">
+		<ul>
+			<li><img src="placeholder.jpg" alt="A button to enable/disable Light Mode" class="lightswitch"></li>
+			<li><a href="index.html"><h3>Home</h3></a></li>
+			<li><a href="projects.html"><h3>Projects</h3></a></li>
+			</ul>
+		</section>
 		</body>
 	</html>
