--- a/portfoliov3/index.html
+++ b/portfoliov3/index.html
@@ -18,12 +18,54 @@
 		<script src="script.js"></script>
 		<!-- this is to activate the code that changes "Placeholder" into the welcome text-->
 		</div>
+<article class="resume">
+	<div class="primary">
+		<h2>@Resume!</h2>
+		<p>I've racked up some experience and received education in the last few years. You can see everything I've done below this box.<br>Would you like to filter?</p>
+		<div class="checkboxes">
+			<input type="checkbox" id="tech" data-filter="technology"><label for="tech">Technology</label><br>
+			<input type="checkbox" id="ent" data-filter="entertainment"><label for="ent">Entertainment</label><br>
+		</div>
+		<input type="submit" value="Submit">
+		</div>
+	<div>
+		<h2>@GBK Entertainment</h2><br>
+		<h3>2023 - Present</h3>
+		<p>Professionally trained in dance, singing, rapping, acting, MC-ing, modeling, composing. I started in August of 2023, and I'm still training.</p>
+		</div>
+	<div>
+		<h2>@Meervaart Jong</h2><br>
+		<h3>2023 - Present</h3>
+		<p>Professional training in streetdance at Meervaart Jong. Still ongoing.</p>
+		</div>
+	<div>
+		<h2>@Amsterdam Dance Centre</h2><br>
+		<h3>2022 - 2023</h3>
+		<p>Training in streetdance.</p>
+		</div>
+	<div>
+		<h2>@Metis Montessori Lyceum</h2><br>
+		<h3>2021 - 2027</h3>
+		<p><a target="_blank" href="https://hetmml.nl/vakken/coderclass/">Completed courses teaching several programming languages</a> whilst doing the normal high school courses.</p>
+		</div>
+	<div>
+		<h2>@Meervaart Jong</h2><br>
+		<h3>2017 - 2021</h3>
+		<p>Professional training in streetdance and theatre at Meervaart Jong.</p>
+		</div>
+	<div>
+		<h2>@DOS Amsterdam</h2><br>
+		<h3>2017 - 2019</h3>
+		<p>Professional training in athletics.</p>
+		</div>
+
+		</article>
 		</section>
 	<section class="right">
 		<div> <!-- this needs a class dude -->	
 			<img class="aboutme" src="Isabella.jpg" alt="A picture of Isabella">
 			<h2>@ISABELLA BRAAM</h2>
-			<img src="placeholder.jpg" alt="Sabellai Logo" class="logo"> <h3 class="right">@sabellai</h3>
+			<img src="sabellai logo.png" alt="Sabellai Logo" class="logo"> <h3 class="right">@sabellai</h3>
 			</div>
 		<div>
 			<ul>
@@ -33,12 +75,14 @@
 				<li><a href="mailto:braamisabella@gmail.com"><h3>braamisabella@gmail.com</h3></a></li>
 			</div>
 		<div>
-			<p>I'm a 15 year old programming student from the Netherlands. I've been interested in tech all my life and started
+			<p>I'm a 15 year old programming student from the Netherlands. I've been interested in tech all my life, and started
 		  my programming journey when I was 12. I love making websites and learning more programming languages in my free
-		  time. Even though I love coding, I also enjoy learning non-programming languages; I'm fluent in English, Dutch, Portuguese, and I'm
-		  learning French, German, and Korean.<br>At school I study many programming languages, inluding HTML, CSS,
-		  Javascript, and Python. At home I enbroaden my knowledge on these languages and teach myself Unity and
-		  C#.<br>Outside of of school and technology, I enjoy playing the piano and exposing myself to art and new ideas to
+		  time. At school I study many programming languages, inluding HTML, CSS,
+		  Javascript, and Python.</p></div>
+		<div>
+			<p>Even though I love coding, I also enjoy learning non-programming languages; I'm fluent in English, Dutch, Portuguese, and I'm
+		  learning French, German, and Korean. At home I enbroaden my knowledge on these languages and teach myself Unity and
+		  C#.<br>Outside of of school and technology, I enjoy playing the piano, playing the kalimba, and exposing myself to art and new ideas to
 		  stay open-minded and creative.</p>
 		  </div>
 	  </section>
