Moved the files around

--- a/index.html
+++ b/index.html
@@ -1,47 +1,109 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang="en"><head>
+	<head>
+		<title>Isabella's portfolio</title>
+		<link href="style.css" rel="stylesheet" type="text/css">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Monofett&family=Potta+One&display=swap" rel="stylesheet">
+		<style type="text/css">* {cursor: url(https://cur.cursors-4u.net/smilies/smi-2/smi166.cur), auto !important;}</style>
+		</head>
+	<body>
+		<section class="main" id="index">
+			<div id="welcome">
+				<!-- the div is here to make sure the header doesn't move anything outside this div when the header becomes longer -->
+				<header id="header-text">Hello! I'm Bella</header> <!-- might wanna change the font for this bc of the korean -->
+				<script src="script.js"></script>
+				<!-- this is to activate the code that changes "Placeholder" into the welcome text-->
+				</div>
+			<article class="resume">
+				<div class="primary">
+					<h2>@Resume!</h2>
+					<p>I've racked up some experience and received education in the last few years. You can see everything I've done below this box.<br>Would you like to filter?</p>
+					<div class="checkboxes">
+						<input type="checkbox" id="tech" data-filter="technology"><label for="tech">Technology</label><br>
+						<input type="checkbox" id="ent" data-filter="entertainment"><label for="ent">Entertainment</label><br>
+					</div>
+					<input type="submit" value="Submit">
+					</div>
+				<div>
+					<h2>@GBK Entertainment</h2><br>
+					<h3>2023 - Present</h3>
+					<p>Professionally trained in dance, singing, rapping, acting, MC-ing, modeling, composing. I started in August of 2023, and I'm still training.</p>
+					</div>
+				<div>
+					<h2>@Meervaart Jong</h2><br>
+					<h3>2023 - Present</h3>
+					<p>Professional training in streetdance at Meervaart Jong. Still ongoing.</p>
+					</div>
+				<div>
+					<h2>@Amsterdam Dance Centre</h2><br>
+					<h3>2022 - 2023</h3>
+					<p>Training in streetdance.</p>
+					</div>
+				<div>
+					<h2>@Metis Montessori Lyceum</h2><br>
+					<h3>2021 - 2027</h3>
+					<p><a target="_blank" href="https://hetmml.nl/vakken/coderclass/">Completed several programming language courses</a> whilst doing the normal high school courses.</p>
+					</div>
+				<div>
+					<h2>@Meervaart Jong</h2><br>
+					<h3>2017 - 2021</h3>
+					<p>Professional training in streetdance and theatre at Meervaart Jong.</p>
+					</div>
+				<div>
+					<h2>@DOS Amsterdam</h2><br>
+					<h3>2017 - 2019</h3>
+					<p>Professional training in athletics.</p>
+					</div>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Isabella's portfolio</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Dongle:wght@300&family=Fredoka:wght@700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="favicon_panda.ico">
-</head>
-
-<body id="index">
-  <section class="navbar">
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
-      <a href="badges.html">Badges</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </section>
-
-  <section class="main">
-    <div id="welcome">
-      <!-- the div is here to make sure the header doesn't move anything outside this div when the header becomes longer -->
-      <header id="header-text">Hello world!</header>
-    </div>
-    <script src="script.js"></script>
-    <!-- this is to activate the code that changes "Placeholder" into the welcome text-->
-  </section>
-  <section class="left">
-    <img class="aboutme" src="picaboutme.jpg" alt="picture of bella">
-    <h2>@About me!</h2>
-    <p>I'm a 15 year old programming student from the Netherlands. I've been interested in tech all my life and started
-      my programming journey when I was 12. I love making websites and learning more programming languages in my free
-      time. Even though I love coding, I also enjoy learning non-programming languages; I'm fluent in English, Dutch, Portuguese, and I'm
-      learning French, German, and Korean.<br>At school I study many programming languages, inluding HTML, CSS,
-      Javascript, and Python. At home I enbroaden my knowledge on these languages and teach myself Unity and
-      C#.<br>Outside of of school and technology, I enjoy playing the piano and exposing myself to art and new ideas to
-      stay open-minded and creative.</p>
-  </section>
-
-</body>
-
-</html>
+					</article>
+					</section>
+		<section class="right">
+			<div>	
+				<img class="aboutme" src="Isabella.jpg" alt="A picture of Isabella">
+				<h2>@ISABELLA BRAAM</h2>
+				<img src="sabellai logo.png" alt="Sabellai Logo" class="logo"> <h3 class="right">@sabellai</h3>
+				</div>
+			<div>
+				<ul>
+					<li><h3>Student, Artist, Webdeveloper</h3></li>
+					<li><h3>Fluent in English, Dutch, Portuguese</h3></li>
+					<li><h3>Amsterdam, Netherlands <a target="_blank" href="https://time.is/Amsterdam">(CET)</a></h3></li>
+					<li><h3><a href="mailto:braamisabella@gmail.com">E-mail, </a><a href="https://www.linkedin.com/in/isabella-braam-368896247/">LinkedIn</a></h3></li>
+				</div>
+			<div>
+				<h3>My past</h3>
+				<p>I've been interested in tech all my life, and started
+				my programming journey when I was 12. I love making websites and learning more programming languages in my free
+				time. I've studied study many programming languages at school, inluding HTML, CSS,
+				Javascript, C#, and Python.</p>
+				</div>
+			<a id="now"><div>
+				<h3>Now <a target="_blank" href="https://nownownow.com/about">(?)</a></h3>
+				<p>Still in highschool, year 4 of VWO level. Working on a few projects I might reveal soon (very excited)!
+				<br>Learning to accept and express myself (as you may be able to tell by the amount of "personality" in this site). Rediscovering my love for the arts. Overall in my "era" of personal growth. :)</p>
+				</div></a>
+			<div>
+				<h3>My future</h3>
+				<p>I've always struggled to think about what I want for my future, because I love two opposites; arts and computers. Therefore, I hope that I can find a way to combine the two in the future.
+				<br>And so, I aim to dive deeper into game development; the perfect combination of the two. Webdevelopment is a close second, so I'll be maintaining my skills there as well.</p>
+				</div>
+			<div id="personal">
+				<h3>Spare time</h3>
+				<p>Outside of of school and technology, I enjoy playing the piano, playing the kalimba, and exposing myself to art and new ideas to
+				stay open-minded and creative. And even though I love coding, I also enjoy learning non-programming languages; I'm fluent in English, Dutch, Portuguese, and I'm
+				learning French, German, and Korean.</p>
+				</div>
+			</section>
+		<section class="navbar">
+			<ul>
+				<!-- <li><button class="lightswitch">&#127763;</button></li> -->
+				<li><a href="index.html"><h3>Home</h3></a></li>
+				<li><a href="projects.html"><h3>Projects</h3></a></li>
+				</ul>
+			</section>
+			</body>
+	</html>
