--- a/projects.html
+++ b/projects.html
@@ -1,129 +1,148 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang="en"><head>
+	<head>
+		<title>Isabella's portfolio</title>
+		<link href="style.css" rel="stylesheet" type="text/css">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Monofett&family=Potta+One&display=swap" rel="stylesheet">
+		<style type="text/css">* {cursor: url(https://cur.cursors-4u.net/smilies/smi-2/smi166.cur), auto !important;}</style>
+		</head>
+	<body>
+		<section class="main" id="projects">
+			<div class="primary">
+				<h2>@Projects!</h2>
+				<p>I often do projects in my free time to challenge and improve myself with new things and refresh what I already
+				know. The projects are sorted from newest to oldest. Here are some projects I've decided to show!<br>Click the
+				titles to open the websites in another tab :)</p>
+				</div>
+			<div>
+				<a target="_blank" href="portfoliov2/index.html"><img src="portfoliov2.png" class="projects" alt="picture of the project"><br>
+				<h2>@Portfolio_version_2</h2>
+				</a><br>
+				<p>This portfolio was the end project for one of my school's HTML courses.
+				The requirements were pretty low-level and restricting, which is why it looks like a less creative, watered-down version of this current portfolio.
+				<br>This website's creation started Jun 20, 2023, and was gradually upgraded until May 8th, 2024.</p>
+				</div>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Isabella's portfolio</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Dongle:wght@300&family=Fredoka:wght@700&display=swap"
-    rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="favicon_panda.ico">
-</head>
+			<div>
+				<a target="_blank" href="https://incc-project-studio.babellaaa.repl.co"><img src="smart_studio.png" class="projects" alt="picture of the project"><br>
+				<h2>@Project_Smart_Studio</h2>
+				</a><br>
+				<p>This website was made as part of a larger project at my school, where we were given around 20 hours to make a
+				mini smart studio using a 3D printer, Blender, and a <a href="
+				https://microbit.org">micro:bit</a>, along with a website to "advertise" the studio. I made the entire
+				website
+				myself, and I helped with some of the micro:bit coding, as well as helping with the modeling of the mini
+				furniture in Blender. This project ended June 22nd of 2023.</p>
+				</div>
 
-<body>
-  <section class="navbar">
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
-      <a href="badges.html">Badges</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </section>
+			<div>
+				<a target="_blank" href="https://eindproduct-thatbellastuffz.html-css-1-cc-2122.repl.co"><img src="menu.png" class="projects" alt="picture of the project"><br>
+				<h2>@Make_a_Menu</h2>
+				</a><br>
+				<p>This was another assignment for school, for which I was assigned to make a website around the theme "menu". I
+				made this September 19th, 2022.</p>
+				</div>
 
-  <section class="main">
-    <div class="mim">
-      <h2>@Projects!</h2>
-      <p>I often do projects in my free time to challenge and improve myself with new things and refresh what I already
-        know. The projects are sorted from newest to oldest. Here are some projects I've decided to show!<br>Click the
-        titles to open the websites in another tab :)</p>
-    </div>
-    <div>
-      <a target="_blank" href="https://incc-project-studio.babellaaa.repl.co"><img src="smart_studio.png"
-          class="projects" alt="picture of the project"><br>
-        <h2>@Project_Smart_Studio</h2>
-      </a><br>
-      <p>This website was made as part of a larger project at my school, where we were given around 20 hours to make a
-        mini smart studio using a 3D printer, Blender, and a <a href="
-          https://microbit.org">micro:bit</a>, along with a website to "advertise" the studio. I made the entire
-        website
-        myself, and I helped with some of the micro:bit coding, as well as helping with the modeling of the mini
-        furniture in Blender. This project ended June 22nd of 2023.</p>
-    </div>
+			<div>
+				<a target="_blank" href="portfoliov1-202207/index.html"><img src="portfoliov1.png" class="projects" alt="picture of the project"><br>
+				<h2>@Portfolio_version_1
+				</h2>
+				</a><br>
+				<p>This website was created mostly to practice making a portfolio to prepare for the making of this portfolio.
+				Simply put, it was an early version that didn't make it out of my files until now.<br>This website was created
+				between early June and late July of 2022.</p>
+				</div>
 
-    <div>
-      <a target="_blank" href="https://eindproduct-thatbellastuffz.html-css-1-cc-2122.repl.co"><img
-          src="menu.png" class="projects" alt="picture of the project"><br>
-        <h2>@Make_a_Menu</h2>
-      </a><br>
-      <p>This was another assignment for school, for which I was assigned to make a website around the theme "menu". I
-        made this September 19th, 2022.</p>
-    </div>
+			<div>
+				<img class="projects" src="codingcore1.png" alt="picture of the project"><br>
+				<h2>@CodingCore</h2><br>
+				<p>CodingCore is a website I made for myself. I use a lot of websites when coding and I'm too lazy to keep typing
+				in all my searches, so I just made this website to be able to press buttons instead of having to type everything
+				out.<br>Coding Core includes resources such as images, pixels, gifs, HTML help (stackoverflow, HTML validator,
+				etc), my favourite playlists I use as background music while coding, a functional note system, and more.
+				Development started July 8, 2022 and is still ongoing. I've separated version 0.8 and 2.0, as I wanted to
+				rewrite codingcore, but keep the original version. Version 0.8 hasn't been updated since July 25, 2022. Version
+				2.0 was created November 21, 2022 and is still in development.<br><a target="_blank" href="https://coding-core-v08.sabellai.repl.co">Open codingcore v0.8 here</a><br><a target="_blank" href="https://coding-core-v20.sabellai.repl.co">Open codingcore v2.0 here</a></p>
+				</div>
 
-    <div>
-      <a target="_blank" href="portfoliov1-202207/index.html"><img src="portfolio1.png"
-          class="projects" alt="picture of the project"><br>
-        <h2>@Portfolio_version_1
-        </h2>
-      </a><br>
-      <p>This website was created mostly to practice making a portfolio to prepare for the making of this portfolio.
-        Simply put, it was an early version that didn't make it out of my files until now.<br>This website was created
-        between early June and late July of 2022.</p>
-    </div>
+			<div>
+				<a target="_blank" href="https://over-mij.thatbellastuffz.repl.co"><img src="html_exercise.png" class="projects" alt="picture of the project"><br>
+				<h2>@HTML_Exercise
+				</h2>
+				</a><br>
+				<p>The HTML Exercise website was made purely to learn some new things about html &amp; css and remember the basics
+				since it'd been a while since I did HTML and CSS. I made this around June 24 2022.</p>
+				</div>
 
-    <div>
-      <img class="projects" src="codingcore1.png" alt="picture of the project"><br>
-      <h2>@CodingCore</h2><br>
-      <p>CodingCore is a website I made for myself. I use a lot of websites when coding and I'm too lazy to keep typing
-        in all my searches, so I just made this website to be able to press buttons instead of having to type everything
-        out.<br>Coding Core includes resources such as images, pixels, gifs, HTML help (stackoverflow, HTML validator,
-        etc), my favourite playlists I use as background music while coding, a functional note system, and more.
-        Development started July 8, 2022 and is still ongoing. I've separated version 0.8 and 2.0, as I wanted to
-        rewrite codingcore, but keep the original version. Version 0.8 hasn't been updated since July 25, 2022. Version
-        2.0 was created November 21, 2022 and is still in development.<br><a target="_blank"
-          href="https://coding-core-v08.sabellai.repl.co">Open codingcore v0.8 here</a><br><a target="_blank"
-          href="https://coding-core-v20.sabellai.repl.co">Open codingcore v2.0 here</a></p>
-    </div>
+			<div>
+				<a target="_blank" href="https://projectcoderclassperiode2.la160209da.repl.co"><img src="safe_society.png" class="projects" alt="picture of the project"><br>
+				<h2>@Project_Safe_Society
+				</h2>
+				</a>
+				<br>
+				<p>Project Veilige Samenleving (translated to English: Project Safe Society) was a project at my school in late
+				March - early April of 2022. We received the assignment of showing how we could make our society safer. Me and
+				the two classmates I worked with chose raising awareness about drugs and alcohol being used more by minors.<br>I
+				made the homepage and the "Manieren om te stoppen" ("Ways to stop") pages, and I helped my classmates with their
+				pages a little. This wasn't one of my greatest works but it was one of the earliest and shows how far I've come.
+				</p>
+				</div>
 
-    <div>
-      <a target="_blank" href="https://over-mij.thatbellastuffz.repl.co"><img src="html_exercise.png"
-          class="projects" alt="picture of the project"><br>
-        <h2>@HTML_Exercise
-        </h2>
-      </a><br>
-      <p>The HTML Exercise website was made purely to learn some new things about html & css and remember the basics
-        since it'd been a while since I did HTML and CSS. I made this around June 24 2022.</p>
-    </div>
-
-    <div>
-      <a target="_blank" href="https://projectcoderclassperiode2.la160209da.repl.co"><img
-          src="safe_society.png" class="projects" alt="picture of the project"><br>
-        <h2>@Project_Safe_Society
-        </h2>
-      </a>
-      <br>
-      <p>Project Veilige Samenleving (translated to English: Project Safe Society) was a project at my school in late
-        March - early April of 2022. We received the assignment of showing how we could make our society safer. Me and
-        the two classmates I worked with chose raising awareness about drugs and alcohol being used more by minors.<br>I
-        made the homepage and the "Manieren om te stoppen" ("Ways to stop") pages, and I helped my classmates with their
-        pages a little. This wasn't one of my greatest works but it was one of the earliest and shows how far I've come.
-      </p>
-    </div>
-
-    <div>
-      <a target="_blank" href="https://eindopdracht-thatbellastuffz.html-css-0-cc.repl.co"><img
-          src="helloworld.png" class="projects" alt="picture of the project"><br>
-        <h2>@My_first_website</h2>
-      </a><br>
-      <p>This was the very first website I've ever made. It was an assignment for school, for which I had to choose a
-        person that was important to technology and make a website about them. I made this November 19th, 2022.</p>
-    </div>
-  </section>
-  <section class="left">
-    <img class="aboutme" src="picaboutme.jpg" alt="picture of bella">
-    <h2>@About me!</h2>
-    <p>I'm a 15 year old programming student from the Netherlands. I've been interested in tech all my life and started
-      my programming journey when I was 12. I love making websites and learning more programming languages in my free
-      time. Even though I love coding, I also enjoy learning non-programming languages; I'm fluent in English, Dutch, Portuguese, and I'm
-      learning French, German, and Korean.<br>At school I study many programming languages, inluding HTML, CSS,
-      Javascript, and Python. At home I enbroaden my knowledge on these languages and teach myself Unity and
-      C#.<br>Outside of of school and technology, I enjoy playing the piano and exposing myself to art and new ideas to
-      stay open-minded and creative.</p>
-  </section>
-
-</body>
-
-</html>
+			<div>
+				<a target="_blank" href="https://eindopdracht-thatbellastuffz.html-css-0-cc.repl.co"><img src="helloworld.png" class="projects" alt="picture of the project"><br>
+				<h2>@My_first_website</h2>
+				</a><br>
+				<p>This was the very first website I've ever made. It was an assignment for school, for which I had to choose a
+				person that was important to technology and make a website about them. I made this November 19th, 2022.</p>
+				</div>
+			</section>
+		<section class="right">
+			<div>	
+				<img class="aboutme" src="Isabella.jpg" alt="A picture of Isabella">
+				<h2>@ISABELLA BRAAM</h2>
+				<img src="sabellai logo.png" alt="Sabellai Logo" class="logo"> <h3 class="right">@sabellai</h3>
+				</div>
+			<div>
+				<ul>
+					<li><h3>Student, Artist, Webdeveloper</h3></li>
+					<li><h3>Fluent in English, Dutch, Portuguese</h3></li>
+					<li><h3>Amsterdam, Netherlands <a target="_blank" href="https://time.is/Amsterdam">(CET)</a></h3></li>
+					<li><h3><a href="mailto:braamisabella@gmail.com">E-mail, </a><a href="https://www.linkedin.com/in/isabella-braam-368896247/">LinkedIn</a></h3></li>
+				</div>
+			<div>
+				<h3>My past</h3>
+				<p>I've been interested in tech all my life, and started
+				my programming journey when I was 12. I love making websites and learning more programming languages in my free
+				time. I've studied study many programming languages at school, inluding HTML, CSS,
+				Javascript, C#, and Python.</p>
+				</div>
+			<a id="now"><div>
+				<h3>Now <a target="_blank" href="https://nownownow.com/about">(?)</a></h3>
+				<p>Still in highschool, year 4 of VWO level. Working on a few projects I might reveal soon (very excited)!
+				<br>Learning to accept and express myself (as you may be able to tell by the amount of "personality" in this site). Rediscovering my love for the arts. Overall in my "era" of personal growth. :)</p>
+				</div></a>
+			<div>
+				<h3>My future</h3>
+				<p>I've always struggled to think about what I want for my future, because I love two opposites; arts and computers. Therefore, I hope that I can find a way to combine the two in the future.
+				<br>And so, I aim to dive deeper into game development; the perfect combination of the two. Webdevelopment is a close second, so I'll be maintaining my skills there as well.</p>
+				</div>
+			<div id="personal">
+				<h3>Spare time</h3>
+				<p>Outside of of school and technology, I enjoy playing the piano, playing the kalimba, and exposing myself to art and new ideas to
+				stay open-minded and creative. And even though I love coding, I also enjoy learning non-programming languages; I'm fluent in English, Dutch, Portuguese, and I'm
+				learning French, German, and Korean.</p>
+				</div>
+			</section>
+		<section class="navbar">
+			<ul>
+				<!-- <li><button class="lightswitch">&#127763;</button></li> -->
+				<li><a href="index.html"><h3>Home</h3></a></li>
+				<li><a href="projects.html"><h3>Projects</h3></a></li>
+				</ul>
+			</section>
+			</body>
+	</html>
